--- a/packages/messages/package.json
+++ b/packages/messages/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "watch": "npm run build -- -w"
+    "dev": "npm run build -- -w"
   },
   "author": "",
   "license": "",
