--- a/packages/messages/tsconfig.json
+++ b/packages/messages/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
+    "target": "es2017",
     "lib": [
       "dom",
-      "es2020"
+      "es2019"
     ],
     "typeRoots": [
       "../../node_modules/@figma"
