--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "18.7.18",
     "concurrently": "7.4.0",
+    "dotenv": "16.0.3",
     "typescript": "4.8.3"
   },
   "workspaces": [
