--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,8 +17,12 @@
     "tslib": "2.4.0"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.21.2",
     "@franklin-figma/messages": "^1.0.0",
+    "@spectrum-icons/workflow": "^4.0.2",
     "esbuild": "0.15.7",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
