--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@franklin-figma/messages": "^1.0.0",
+    "@franklin-figma/ui-worker": "^1.0.0",
     "esbuild": "0.15.7"
   }
 }
