--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -7,6 +7,7 @@
     ],
     "outDir": "dist",
     "jsx": "react",
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
   "include": [
