move to franklin ui

--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,5 @@
     "figjam"
   ],
   "containsWidget": true,
-  "widgetApi": "1.0.0",
-  "ui": {
-    "ui": "packages/ui/dist/index.html",
-    "worker": "packages/ui-worker/dist/ui/index.html"
-  }
+  "widgetApi": "1.0.0"
 }
