--- a/public/package.json
+++ b/public/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cd ../.. && hlx up --port 3000",
+    "dev": "cd .. && hlx up --port 3000 --no-open",
     "lint": "eslint .",
     "clean": "rm -rf scripts/*.min.js",
     "purge": "npm run clean && rm -rf node_modules"
