add service, auth routes

--- a/.public.env
+++ b/.public.env
@@ -1,9 +1,9 @@
 AUTH_ENDPOINT_DEV=http://localhost:3001
-AUTH_ENDPOINT_STAGE=https://main--franklin-figma--maxakuru.helix3.dev
-AUTH_ENDPOINT_PROD=https://main--franklin-figma--maxakuru.helix3.dev
+AUTH_ENDPOINT_STAGE=https://figma.helix3.dev
+AUTH_ENDPOINT_PROD=https://figma.helix3.dev
 
 UI_ENDPOINT_DEV=http://localhost:3000
 UI_ENDPOINT_STAGE=https://main--franklin-figma--maxakuru.hlx.page
-UI_ENDPOINT_PROD=https://main--franklin-figma--maxakuru.helix3.dev
+UI_ENDPOINT_PROD=https://figma.helix3.dev
 
 PLUGIN_ID=1152303696398026079
