--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,14 +13,14 @@
   "devDependencies": {
     "@figma/plugin-typings": "1.51.0",
     "tslib": "2.4.0",
-    "@franklin-figma/vendor": "^1.0.0"
+    "@franklin-figma/vendor": "^1.0.0",
+    "esbuild": "0.15.7"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.21.2",
     "@franklin-figma/messages": "^1.0.0",
     "@franklin-figma/mobx-preact-lite": "^1.0.0",
     "@spectrum-icons/workflow": "^4.0.2",
-    "esbuild": "0.15.7",
     "mobx": "^6.6.2",
     "preact": "^10.11.0"
   }
