--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:mobx-preact-lite": "npm run dev -w packages/mobx-preact-lite",
     "dev:vendor": "npm run dev -w packages/vendor",
     "dev:public": "npm run dev -w public",
+    "dev:service": "npm run dev -w packages/service",
     "dev": "NODE_ENV=development concurrently -k \"npm:dev:*\"",
     "lint": "npm run lint --ws --if-present",
     "test": "npm test --ws --if-present",
