--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "@types/node": "18.7.18",
-    "concurrently": "7.4.0",
-    "dotenv": "16.0.3",
+    "@types/node": "20.4.2",
+    "concurrently": "8.2.0",
+    "dotenv": "16.3.1",
     "husky": "^8.0.1",
-    "typescript": "4.8.3"
+    "typescript": "5.1.6"
   },
   "workspaces": [
     "packages/messages",
@@ -39,5 +39,8 @@
     "packages/backend",
     "packages/ui",
     "public"
-  ]
+  ],
+  "dependencies": {
+    "debug": "^4.3.4"
+  }
 }
